--- a/projeto_categoria_audio.html
+++ b/projeto_categoria_audio.html
@@ -87,7 +87,7 @@
 							this.retorno +='<div class="divider"></div>';
 							this.retorno +='<p>'+ data.Item[i].nome_item +'</p>';
 							this.retorno +='<audio controls>';
-							this.retorno +='<source src="https://portalulb.org.br/aplicativo/audios/'+ data.Item[i].arquivo +'" type="audio/mpeg">';
+							this.retorno +='<source src="http://portalulb.org.br/aplicativo/audios/'+ data.Item[i].arquivo +'" type="audio/mpeg">';
 							this.retorno +='Seu dispositivo não suporta este áudio.';
 							this.retorno +='</audio>';
 							}
